Add Src and Update Html

--- a/hello.html
+++ b/hello.html
@@ -4,6 +4,17 @@
     <title>My Web Page</title>
   </head>
   <body>
-    Hello World
+  <h2> <ul>
+      <li>One item </li>
+      <li>Another item</li>
+      <li>Yet another item</li>
+    </ul>
+    <ol>
+    <li>first item</li>
+    <li>second item</li>
+    <li>third item</li>
+    </ol></h2>
+    <img src="C:\Users\DELL\Desktop\App\New folder\MyFirstRepository\src\Land.jpg" alt="#404 Error">
+  <h1>  Hello World</h1>
   </body>
 </html>
