--- a/hello.html
+++ b/hello.html
@@ -14,7 +14,7 @@
     <li>second item</li>
     <li>third item</li>
     </ol></h2>
-    <img src="C:\Users\DELL\Desktop\App\New folder\MyFirstRepository\src\Land.jpg" alt="#404 Error">
+    <img src="C:\Users\DELL\Desktop\App\New folder\MyFirstRepository\src\Land.jpg" alt="#404 Error" height ="200" width="300">
   <h1>  Hello World</h1>
   </body>
 </html>
